<resources>
    <string name="app_name">My Application</string>
    <string name="textView">Input number here</string>
    <string name="clear">Clear</string>
    <string name="subtraction">-</string>
    <string name="multi">X</string>
    <string name="divivsion">/</string>
    <string name="summa">+</string>
    <string name="six">6</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="three">3</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="point">.</string>
    <string name="equally">=</string>
    <string name="zero">0</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="percent">%</string>
    <string name="sqrt">√</string>
    <string name="empty_input">Inptut your numbers first</string>
    <string name="incorrect_input">Incorrect input data</string>


</resources>
